argocd/up-tagger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: up-tagger
  namespace: up-tagger
  labels:
    app: up-tagger
spec:
  selector:
    matchLabels:
      app: up-tagger
  template:
    metadata:
      labels:
        app: up-tagger
    spec:
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      imagePullPolicy: always
      containers:
      - name: up-tagger
        image: ghcr.io/alex-j-butler/up-tagger:latest
        ports:
        - containerPort: 8000
        readinessProbe:
         httpGet:
           path: /status
           port: 80
         initialDelaySeconds: 5
         timeoutSeconds: 1
         periodSeconds: 15
